--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,10 +25,10 @@ steps:
       - |
         PROJECT=$$(gcloud config get-value core/project)
         export USE_GKE_GCLOUD_AUTH_PLUGIN=true
-        gcloud container clusters get-credentials gke-cluster --zone us-central1-c --project gcp-kubernetes-assignment
+        gcloud container clusters get-credentials gke-kubernetes --zone us-central1-c --project gcp-kubernetes-assignment
         kubectl apply -f container2-deployment.yaml
 
 images:
-  - 'us-central1-docker.pkg.dev/cloud-computing-441019/kube-artifact-registry/container2:latest'
+  - 'us-central1-docker.pkg.dev/gcp-kubernetes-assignment/kubernetes-assignment/container2:latest'
 
 
